add verification workflow

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 AUTH_SERVER=https://identity.eu.komgo-sit.net
 API_SERVER=https://api.kapsule-eu-uat.eu.komgo-sit.net
+VERIFICATION_SERVER=https://api.komgo-uat.eu.komgo-sit.net/
 CLIENT_ID=fiata
 USERNAME=
 PASSWORD=
