--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.21.0"
+pre-commit = "^3.7.1"
 
 [build-system]
 requires = ["poetry-core"]
