--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10, <3.13"
 requests = "^2.31.0"
+dotenv = "^0.9.9"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.21.0"
